# dev-setup

dev-cli/: Cargo.toml
dev-cli/src/: ai.rs  cli.rs  commands.rs  config.rs  main.rs
dev-cli/src/tui/: app.rs  events.rs  mod.rs  ui.rs
typescript/: .gitignore  QUICKSTART.md  README.md  dev  setup.sh
typescript/configs/: eslint.config.js
typescript/scripts/: build-check.sh  push-code.sh
typescript/templates/: package.json  tsconfig.app.json  tsconfig.node.json
